added another line

--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     <p>It was a dark and stormy night...</p>
     <p>stuff</p>
 	<p>New line added to check</p>
+	<p>final line, we did it</p>
   </body>
 </html>
