added fifth line to the story

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     <p>stuff</p>
 	<p>New line added to check</p>
 	<p>final line, we did it</p>
+	<p>Yep, finally. Thanks for your help!</p>
   </body>
 </html>
